# modules/ordering/internal/rest/api.swagger.json
@@ -121,6 +121,9 @@
     "orderingpbCreateOrderRequest": {
       "type": "object",
       "properties": {
+        "idempotencyKey": {
+          "type": "string"
+        },
         "items": {
           "type": "array",
           "items": {
@@ -140,6 +143,9 @@
       "properties": {
         "id": {
           "type": "string"
+        },
+        "accepted": {
+          "type": "boolean"
         }
       }
     },
